--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "magic-sdk": "^4.0.2",
     "next": "10.0.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "swr": "^0.3.11"
   }
 }
