--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.0.0",
     "@stripe/stripe-js": "^1.11.0",
     "framer-motion": "^3.1.1",
+    "isomorphic-unfetch": "^3.1.0",
     "magic-sdk": "^4.0.2",
     "next": "10.0.3",
     "react": "17.0.1",
