--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "magic-sdk": "^4.0.2",
     "next": "10.0.3",
+    "nookies": "^2.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "swr": "^0.3.11"
