--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^3.1.1",
     "isomorphic-unfetch": "^3.1.0",
     "magic-sdk": "^4.0.2",
+    "mysql": "^2.18.1",
     "next": "10.0.3",
     "nookies": "^2.5.1",
     "react": "17.0.1",
