--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.14.2",
+    "react-markdown": "^5.0.3",
     "swr": "^0.3.11"
   }
 }
