--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/stripe-js": "^1.11.0",
     "framer-motion": "^3.1.1",
     "isomorphic-unfetch": "^3.1.0",
+    "material-ui-flat-pagination": "^4.1.1",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
