--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.0.4",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@material-ui/core": "^4.11.3",
     "@stripe/stripe-js": "^1.11.0",
     "framer-motion": "^3.1.1",
     "isomorphic-unfetch": "^3.1.0",
@@ -20,6 +21,7 @@
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-dropdown-select": "^4.7.3",
     "react-hook-form": "^6.14.2",
     "react-markdown": "^5.0.3",
     "swr": "^0.3.11"
