--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "material-ui-flat-pagination": "^4.1.1",
     "next": "10.0.3",
+    "next-seo": "^4.20.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.14.2",
